# p2p_org

./: .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
analysis/: analysis.py  defi_analysis.py  transaction_analysis.py
common/: config.py  logging_setup.py
data_providers/: data_provider.py  etherscan_provider.py
