[tool.poetry]
name = "p2p-org"
version = "0.1.0"
description = ""
authors = ["Lukas Bures <burylukas@seznam.cz>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
starlette = "^0.33.0"
web3 = "^6.11.4"
pandas = "^2.1.3"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.1.7"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
  | profiling
)/
'''

[tool.isort]
profile = "black"